# maple-cody-recommendation-system

./: .gitignore  .gitmodules  README.md  build_avatarserver_docker.sh  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  run-check.sh  run_inference_server.sh  setup.cfg  test_call.sh  test_get_image.sh  valid_wz_code.json
WzComparerR2Server/: .dockerignore  .gitignore  Dockerfile  Program.cs  README.md  WzComparerR2Server.csproj  appsettings.Development.json  docker-compose.debug.yml  docker-compose.yml  run.sh
WzComparerR2Server/Controllers/: HomeController.cs
WzComparerR2Server/Models/: ErrorViewModel.cs  ItemListModel.cs
WzComparerR2Server/Properties/: launchSettings.json
WzComparerR2Server/WzLoader/: Wz_File.cs
data/: base_wz.json
docker/: Dockerfile.AvatarServer  Dockerfile.AvatarServer.dockerignore
e2e/: test.py  test_character_info_call.sh
infra/: README.md
notebook/: ETL.ipynb  ETL.py  base_wz_code.json  cosine_similarity_recommendation.py  wz_analyze.ipynb  wz_eda.ipynb
notebook/baseline_model/: train.py
notebook/make_train_data_prototype/: script.py
notebook/model/: EDA.ipynb  model.py  train.py  train2.py
script/crawling/: README.md  __main__.py  constant.py  process_image.py  process_merge.py  process_name.py  util.py
script/crwaling/: README.md  __main__.py  crawl.py  image_crawling.py  tor.sh
script/make_train_data_prototype/: script.py
src/ApiServer/: __main__.py
src/AvatarServer/: __main__.py
src/ImageServer/: __main__.py
src/InferenceServer/: __main__.py
src/TrainServer/: __main__.py
(+149 files in other folders)
