[tool.poetry]
name = "maple-cody-recommandation-system"
version = "0.1.0"
description = ""
authors = ["leecs0503"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyppeteer = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"
pyright = "^1.1.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = ".venv"
